--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Birdsaver</string>
-    <string name="click_me">Click Me</string>
+    <string name="submit">Submit</string>
+    <string name="ip_address">IP Address</string>
+    <string name="home">Home</string>
+    <string name="back">Back</string>
 </resources>
