added red pixel detector view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="navigateToIpAddressView">Ip Address View</string>
     <string name="navigateToDeleteView">Delete View</string>
     <string name="navigateToGpsView">GPS View</string>
+    <string name="navigateToRedPixelDetectorView">Red Pixel Detector</string>
     <string name="submit">Submit</string>
     <string name="ip_address">IP Address</string>
     <string name="home">Home</string>
